# aemp-rap-scrape

./: README.md  pyproject.toml
cleaning/.ipynb_checkpoints/: RAP Scrape Cleaning Pipeline-checkpoint.ipynb  rap-scrape-cleaning-pipeline-checkpoint.ipynb
codebooks/: landlord_codebook.csv  tenant_codebook.csv
data/: .com.google.Chrome.SNFSWV  .com.google.Chrome.jgFpYN  .com.google.Chrome.qGuGGh
data/clean/: rap_cases_clean.csv  top_level_data.csv
data/raw/: data_01011995_12311999.csv  data_01012000_12312009.csv  data_01012010_12312014.csv  data_01012015_12312015.csv  data_01012016_12312016.csv  data_01012017_12312017.csv  data_01012018_12312018.csv  data_01012019_12312019.csv  data_01012020_12312020.csv  data_01012021_12312021.csv  data_01012022_12312022.csv
data/top-level/: Cases_2022_3_20.xls
scraper/: .com.google.Chrome.5PploN  .com.google.Chrome.JZoPNk  .com.google.Chrome.qcfXh9  rap_scrape.py
scraper/.ipynb_checkpoints/: 01 – Census API Primer, Interface, & Toolkit-checkpoint.ipynb  rap_scrape-checkpoint.py
