[tool.poetry]
name = "rent-adjustment-program-scrape"
version = "0.1.0"
description = ""
authors = ["Eve Hunter <eve.hunter@greenhouse.io>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
selenium = "^4.1.3"
jupyter = "^1.0.0"
Scrapy = "^2.6.1"
openpyxl = "^3.0.9"
tqdm = "^4.63.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
